src/assets/stylesheets/vars.scss
:root[theme="light"],:root  {
 --amount-text: #53a867;
  --button-bg: #5c33be;
  --button-bg-danger:#E10505;
  --button-border-color: #ddd;
  --button-font-size: 18px;
  --button-height: 48px;
  --button-radius: 8px;
  --button-text: white;
  --date-text: #999999;
  --emoji-nav-text-selected: #333;
  --emoji-nav-text: #999;
  --error-color: #E10505;
  --float-button-bg: var(--button-bg);
  --float-button-text: white;
  --input-border-color: #5c33be;
  --input-min-height: 48px;
  --input-radius: var(--button-radius);
  --input-shadow: rgba(0,0,0,0.25);
  --navbar-bg-end: var(--welcome-bg-end);
  --navbar-bg-start: var(--welcome-bg-start);
  --navbar-text: white;
  --number-button-bg-important: #5c33be;
  --number-button-bg: white;
  --number-button-text-important: white;
  --overlay-bg: white;
  --overlay-mask-bg: rgba(0, 0, 0, 0.5);
  --overlay-user-bg: #5c33be;
  --overlay-user-text: white;
  --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
  --top-safe-area-height: 24px;
  --transition-duration: 0.5s;
  --welcome-bg-end: #8f4cd7;
  --welcome-bg-start: #5d33be;
  --welcome-card-bg: white;
  --welcome-nav-gap: 8px;
  --welcome-nav-height: 64px;
  --welcome-text: white;
  --z-index-bottom-nav: 8;
  --z-index-overlay: 16;  
  --tag-bg: #EFEFEF;
  --list-tag-text: #333;
  --list-amount-text: var(--amount-text);
  --list-time-text: var(--date-text);
  --main: #5c33be;
  --total-bg: #252A43;
  --total-text: white;
  --total-income: #FE7275;
  --total-expenses: #53A867;
  --bg: white;  
  --dialog-header-text: white;
}
:root[theme='dark']{
  --navbar-text: black;
}

